--- a/ANN/WebPageFiles/WebPage.html
+++ b/ANN/WebPageFiles/WebPage.html
@@ -49,7 +49,7 @@
       <p>
         &emsp;
         To keep it simple and create basic imagination of Neural Networks, it is like a human child. If it encounters with something for the first time ANN tries to predict what it is based on its current knowledge. Then our little “child” asks to
-        its parents or teachers. Then compares its prediction with the answer. If there is big differene ANN should update its knowledge. All these learning sessions go on and on again till it reaches to the maturity and can predict ecerything
+        its parents or teachers. Then compares its prediction with the answer. If there is big differene ANN should update its knowledge. All these learning sessions go on and on again till it reaches to the maturity and can predict everything
         confidently with its background knowledge. </p>
       <p>
         &emsp; Okay that is enough to create the imagination that how our Neural Networks algorihtm works. This working mechanism is valid for all Supervised Parametric Learning algorthms and architectures.
@@ -67,7 +67,7 @@
       </p>
       <img src="ErrorFunction.png" class="img-fluid introductionImageClass" alt="Logo Here">
       <p>
-        &emsp; So Hypothesis function is prediction of “child”s and y is answer of a parent. With help of tihs error function child can learn how 9much it missed the right answer.
+        &emsp; So product of Hypothesis function is prediction of “child”s and y is answer of a parent. With help of this error function child can learn how much it missed the right answer.
       </p>
       <p>
         &emsp; After finding how big or small ANN mistake did while predicting it learns and update its knowledge. From Hypothesis functions the thetas can be imagined as the knowledge of ANN. In more technical language it is called weights,
